week15/src/generated/tinyRustParser.java
// Generated from C:/Users/user/IdeaProjects/CP-2024/week15/src/tinyRust.g4 by ANTLR 4.13.1
package generated;

import java.util.List;
import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class tinyRustParser extends Parser {

    public static final int
        T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
        T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
        T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
        T__24 = 25, FUNC = 26, I32 = 27, LOOP = 28, FOR = 29, IF = 30, ELSE = 31, RETURN = 32,
        LET = 33, MUT = 34, BREAK = 35, OR = 36, AND = 37, LE = 38, GE = 39, EQ = 40, NE = 41, RARROW = 42,
        ID = 43, LITERAL = 44, LIT_INT = 45, LIT_STR = 46, DecimalConstant = 47, OctalConstant = 48,
        HexadecimalConstant = 49, NilConstant = 50, WildCardConstant = 51, WS = 52;
    public static final int
        RULE_program = 0, RULE_decl = 1, RULE_fun_decl = 2, RULE_main_decl = 3,
        RULE_params = 4, RULE_param = 5, RULE_type_spec = 6, RULE_ret_type_spec = 7,
        RULE_compound_stmt = 8, RULE_local_decl = 9, RULE_dec_spec = 10, RULE_val = 11,
        RULE_stmt = 12, RULE_expr_stmt = 13, RULE_expr = 14, RULE_additive_expr = 15,
        RULE_multiplicative_expr = 16, RULE_unary_expr = 17, RULE_factor = 18,
        RULE_comparative_expr = 19, RULE_relative_expr = 20, RULE_assignment_stmt = 21,
        RULE_if_stmt = 22, RULE_for_stmt = 23, RULE_loop_stmt = 24, RULE_print_stmt = 25,
        RULE_range = 26, RULE_return_stmt = 27, RULE_break_stmt = 28, RULE_match_stmt = 29,
        RULE_match_expr = 30, RULE_match_conditional_expr = 31, RULE_match_body = 32,
        RULE_args = 33, RULE_literal = 34, RULE_id = 35;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
        new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
        new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public tinyRustParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
            "program", "decl", "fun_decl", "main_decl", "params", "param", "type_spec",
            "ret_type_spec", "compound_stmt", "local_decl", "dec_spec", "val", "stmt",
            "expr_stmt", "expr", "additive_expr", "multiplicative_expr", "unary_expr",
            "factor", "comparative_expr", "relative_expr", "assignment_stmt", "if_stmt",
            "for_stmt", "loop_stmt", "print_stmt", "range", "return_stmt", "break_stmt",
            "match_stmt", "match_expr", "match_conditional_expr", "match_body", "args",
            "literal", "id"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
            null, "'('", "')'", "'main'", "'()'", "','", "':'", "'{'", "'}'", "'='",
            "';'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'<'", "'>'", "'in'",
            "'println!'", "'\"{}\"'", "'..'", "'match'", "'=>'", "'|'", "'fn'", "'i32'",
            "'loop'", "'for'", "'if'", "'else'", "'return'", "'let'", "'mut'", "'break'",
            "'||'", "'&&'", "'<='", "'>='", "'=='", "'!='", "'->'", null, null, null,
            null, null, null, null, null, "'_'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, "FUNC", "I32", "LOOP", "FOR", "IF", "ELSE", "RETURN", "LET",
            "MUT", "BREAK", "OR", "AND", "LE", "GE", "EQ", "NE", "RARROW", "ID",
            "LITERAL", "LIT_INT", "LIT_STR", "DecimalConstant", "OctalConstant",
            "HexadecimalConstant", "NilConstant", "WildCardConstant", "WS"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "tinyRust.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(73);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(72);
                            decl();
                        }
                    }
                    setState(75);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == FUNC);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DeclContext decl() throws RecognitionException {
        DeclContext _localctx = new DeclContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_decl);
        try {
            setState(79);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(77);
                    main_decl();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(78);
                    fun_decl();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Fun_declContext fun_decl() throws RecognitionException {
        Fun_declContext _localctx = new Fun_declContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_fun_decl);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(81);
                match(FUNC);
                setState(82);
                id();
                setState(83);
                match(T__0);
                setState(84);
                params();
                setState(85);
                match(T__1);
                setState(86);
                ret_type_spec();
                setState(87);
                compound_stmt();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Main_declContext main_decl() throws RecognitionException {
        Main_declContext _localctx = new Main_declContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_main_decl);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(89);
                match(FUNC);
                setState(90);
                match(T__2);
                setState(91);
                match(T__3);
                setState(92);
                compound_stmt();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ParamsContext params() throws RecognitionException {
        ParamsContext _localctx = new ParamsContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_params);
        int _la;
        try {
            setState(103);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__1:
                    enterOuterAlt(_localctx, 1);
                {
                }
                break;
                case ID:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(95);
                    param();
                    setState(100);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == T__4) {
                        {
                            {
                                setState(96);
                                match(T__4);
                                setState(97);
                                param();
                            }
                        }
                        setState(102);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ParamContext param() throws RecognitionException {
        ParamContext _localctx = new ParamContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_param);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(105);
                id();
                setState(106);
                match(T__5);
                setState(107);
                type_spec();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Type_specContext type_spec() throws RecognitionException {
        Type_specContext _localctx = new Type_specContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_type_spec);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(109);
                match(I32);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Ret_type_specContext ret_type_spec() throws RecognitionException {
        Ret_type_specContext _localctx = new Ret_type_specContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_ret_type_spec);
        try {
            setState(114);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__6:
                    enterOuterAlt(_localctx, 1);
                {
                }
                break;
                case RARROW:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(112);
                    match(RARROW);
                    setState(113);
                    type_spec();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Compound_stmtContext compound_stmt() throws RecognitionException {
        Compound_stmtContext _localctx = new Compound_stmtContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_compound_stmt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(116);
                match(T__6);
                setState(120);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == LET) {
                    {
                        {
                            setState(117);
                            local_decl();
                        }
                    }
                    setState(122);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(126);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 26428822327426L) != 0)) {
                    {
                        {
                            setState(123);
                            stmt();
                        }
                    }
                    setState(128);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(129);
                match(T__7);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Local_declContext local_decl() throws RecognitionException {
        Local_declContext _localctx = new Local_declContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_local_decl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(131);
                dec_spec();
                setState(132);
                id();
                setState(135);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__5) {
                    {
                        setState(133);
                        match(T__5);
                        setState(134);
                        type_spec();
                    }
                }

                setState(137);
                match(T__8);
                setState(138);
                val();
                setState(139);
                match(T__9);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Dec_specContext dec_spec() throws RecognitionException {
        Dec_specContext _localctx = new Dec_specContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_dec_spec);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(141);
                match(LET);
                setState(143);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == MUT) {
                    {
                        setState(142);
                        match(MUT);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ValContext val() throws RecognitionException {
        ValContext _localctx = new ValContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_val);
        try {
            setState(147);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case LITERAL:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(145);
                    literal();
                }
                break;
                case ID:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(146);
                    id();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StmtContext stmt() throws RecognitionException {
        StmtContext _localctx = new StmtContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_stmt);
        try {
            setState(159);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 10, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(149);
                    expr_stmt();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(150);
                    assignment_stmt();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(151);
                    compound_stmt();
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(152);
                    if_stmt();
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(153);
                    for_stmt();
                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(154);
                    return_stmt();
                }
                break;
                case 7:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(155);
                    break_stmt();
                }
                break;
                case 8:
                    enterOuterAlt(_localctx, 8);
                {
                    setState(156);
                    loop_stmt();
                }
                break;
                case 9:
                    enterOuterAlt(_localctx, 9);
                {
                    setState(157);
                    print_stmt();
                }
                break;
                case 10:
                    enterOuterAlt(_localctx, 10);
                {
                    setState(158);
                    match_stmt();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Expr_stmtContext expr_stmt() throws RecognitionException {
        Expr_stmtContext _localctx = new Expr_stmtContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_expr_stmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(161);
                expr();
                setState(162);
                match(T__9);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExprContext expr() throws RecognitionException {
        ExprContext _localctx = new ExprContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_expr);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(164);
                relative_expr(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Additive_exprContext additive_expr() throws RecognitionException {
        return additive_expr(0);
    }

    private Additive_exprContext additive_expr(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        Additive_exprContext _localctx = new Additive_exprContext(_ctx, _parentState);
        Additive_exprContext _prevctx = _localctx;
        int _startState = 30;
        enterRecursionRule(_localctx, 30, RULE_additive_expr, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(167);
                    multiplicative_expr(0);
                }
                _ctx.stop = _input.LT(-1);
                setState(174);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 11, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
						if (_parseListeners != null) {
							triggerExitRuleEvent();
						}
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new Additive_exprContext(_parentctx, _parentState);
                                _localctx.left = _prevctx;
                                pushNewRecursionContext(_localctx, _startState, RULE_additive_expr);
                                setState(169);
								if (!(precpred(_ctx, 2))) {
									throw new FailedPredicateException(this, "precpred(_ctx, 2)");
								}
                                setState(170);
                                ((Additive_exprContext) _localctx).op = _input.LT(1);
                                _la = _input.LA(1);
                                if (!(_la == T__10 || _la == T__11)) {
                                    ((Additive_exprContext) _localctx).op = (Token) _errHandler.recoverInline(this);
                                } else {
									if (_input.LA(1) == Token.EOF) {
										matchedEOF = true;
									}
                                    _errHandler.reportMatch(this);
                                    consume();
                                }
                                setState(171);
                                ((Additive_exprContext) _localctx).right = multiplicative_expr(0);
                            }
                        }
                    }
                    setState(176);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 11, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final Multiplicative_exprContext multiplicative_expr() throws RecognitionException {
        return multiplicative_expr(0);
    }

    private Multiplicative_exprContext multiplicative_expr(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        Multiplicative_exprContext _localctx = new Multiplicative_exprContext(_ctx, _parentState);
        Multiplicative_exprContext _prevctx = _localctx;
        int _startState = 32;
        enterRecursionRule(_localctx, 32, RULE_multiplicative_expr, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(178);
                    unary_expr();
                }
                _ctx.stop = _input.LT(-1);
                setState(185);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 12, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
						if (_parseListeners != null) {
							triggerExitRuleEvent();
						}
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new Multiplicative_exprContext(_parentctx, _parentState);
                                _localctx.left = _prevctx;
                                pushNewRecursionContext(_localctx, _startState, RULE_multiplicative_expr);
                                setState(180);
								if (!(precpred(_ctx, 2))) {
									throw new FailedPredicateException(this, "precpred(_ctx, 2)");
								}
                                setState(181);
                                ((Multiplicative_exprContext) _localctx).op = _input.LT(1);
                                _la = _input.LA(1);
                                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 57344L) != 0))) {
                                    ((Multiplicative_exprContext) _localctx).op = (Token) _errHandler.recoverInline(this);
                                } else {
									if (_input.LA(1) == Token.EOF) {
										matchedEOF = true;
									}
                                    _errHandler.reportMatch(this);
                                    consume();
                                }
                                setState(182);
                                ((Multiplicative_exprContext) _localctx).right = unary_expr();
                            }
                        }
                    }
                    setState(187);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 12, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final Unary_exprContext unary_expr() throws RecognitionException {
        Unary_exprContext _localctx = new Unary_exprContext(_ctx, getState());
        enterRule(_localctx, 34, RULE_unary_expr);
        int _la;
        try {
            setState(191);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__11:
                case T__15:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(188);
                    ((Unary_exprContext) _localctx).op = _input.LT(1);
                    _la = _input.LA(1);
                    if (!(_la == T__11 || _la == T__15)) {
                        ((Unary_exprContext) _localctx).op = (Token) _errHandler.recoverInline(this);
                    } else {
						if (_input.LA(1) == Token.EOF) {
							matchedEOF = true;
						}
                        _errHandler.reportMatch(this);
                        consume();
                    }
                    setState(189);
                    factor();
                }
                break;
                case T__0:
                case ID:
                case LITERAL:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(190);
                    factor();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FactorContext factor() throws RecognitionException {
        FactorContext _localctx = new FactorContext(_ctx, getState());
        enterRule(_localctx, 36, RULE_factor);
        int _la;
        try {
            setState(209);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 16, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(195);
                    _errHandler.sync(this);
                    switch (_input.LA(1)) {
                        case LITERAL: {
                            setState(193);
                            literal();
                        }
                        break;
                        case ID: {
                            setState(194);
                            id();
                        }
                        break;
                        default:
                            throw new NoViableAltException(this);
                    }
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(197);
                    match(T__0);
                    setState(198);
                    expr();
                    setState(199);
                    match(T__1);
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(201);
                    id();
                    setState(203);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == T__15) {
                        {
                            setState(202);
                            match(T__15);
                        }
                    }

                    setState(205);
                    match(T__0);
                    setState(206);
                    args();
                    setState(207);
                    match(T__1);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Comparative_exprContext comparative_expr() throws RecognitionException {
        return comparative_expr(0);
    }

    private Comparative_exprContext comparative_expr(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        Comparative_exprContext _localctx = new Comparative_exprContext(_ctx, _parentState);
        Comparative_exprContext _prevctx = _localctx;
        int _startState = 38;
        enterRecursionRule(_localctx, 38, RULE_comparative_expr, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    setState(212);
                    additive_expr(0);
                }
                _ctx.stop = _input.LT(-1);
                setState(219);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 17, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
						if (_parseListeners != null) {
							triggerExitRuleEvent();
						}
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new Comparative_exprContext(_parentctx, _parentState);
                                _localctx.left = _prevctx;
                                pushNewRecursionContext(_localctx, _startState, RULE_comparative_expr);
                                setState(214);
								if (!(precpred(_ctx, 2))) {
									throw new FailedPredicateException(this, "precpred(_ctx, 2)");
								}
                                setState(215);
                                ((Comparative_exprContext) _localctx).op = _input.LT(1);
                                _la = _input.LA(1);
                                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 4123168997376L) != 0))) {
                                    ((Comparative_exprContext) _localctx).op = (Token) _errHandler.recoverInline(this);
                                } else {
									if (_input.LA(1) == Token.EOF) {
										matchedEOF = true;
									}
                                    _errHandler.reportMatch(this);
                                    consume();
                                }
                                setState(216);
                                ((Comparative_exprContext) _localctx).right = additive_expr(0);
                            }
                        }
                    }
                    setState(221);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 17, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final Relative_exprContext relative_expr() throws RecognitionException {
        return relative_expr(0);
    }
